--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,25 +8,25 @@
 
 html,body{
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     background-color: black;
 }
 
 body{
-    background: url('../imagens/fundo-madeira.jpg')no-repeat top center;
+    background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
     background-size:cover;
-    background-attachment: fixed;
+    background-attachment:fixed;
 }
 
 main{
-    position: relative;
-    height: 100vh;
+    position:relative;
+    height:100vh;
 }
 
 section#telefone{
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    position:absolute;
+    top:50%;
+    left:50%;
     transform: translate(-50%, -50%);
     height: 627px;
     width: 311px;
@@ -38,7 +38,7 @@ iframe#tela{
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 471px;
 }
 
